    - one huge bug was fixed in the boot time defragmenter, udefrag.dll and
      zenwinx.dll libraries - they all have had improper definition of the
      IO_STATUS_BLOCK structure used by many undocumented Windows API functions
    - actions to take after processing is done implemented as separate menu
    - file status was added to reports
    - current time was added to reports
    - icon to Explorer context menu handler added
    - the following translations were added:

      Galician

    - the following translations were updated:

      Italian, Norwegian, Portuguese, Spanish(ES), French(FR), Dutch, Czech,
      Vietnamese(VI), Spanish(AR)

    - VBscript added to run context menu handler elevated on Vista and above
    - dry_run parameter added to GUI options as well as UD_DRY_RUN environment
      variable support added to the driver to be able to quickly test algorithms
      without actual data moves on disk
    - keyboard reading routines used at Windows boot time were reimplemented
      to reach higher reliability
    - Developers: winx_get_system_time, winx_get_local_time functions 
      added to zenwinx library
    - ULONG_PTR wrong definition was replaced by correct one in ntndk.h file
    
    alpha2:
    - ability to resize list of volumes was added to graphical interface
    - the volume label is now displayed in the volume list
    - textual progress is now displayed in the status column of the volume list
    - file sizes were added to HTML reports
    - file sizes were converted to a human readable format in text reports
    - few bugs were fixed in the BootExecute Control program used to enable and
      disable the boot time defragmenter
    - Developers: build scripts were highly optimized
    - mistakes preventing build on the path containing spaces were eliminated
    - support of custom report options was added to simplify upgrade 
      of default options
    - the following translations were updated:

      Chinese (Simplified)
