@@ -13,7 +13,7 @@ src = {
 }
 rc = { "defrag.rc" }
 
-libs = { "kernel32", "user32", "msvcrt" }
+libs = { "kernel32", "user32", "msvcrt", "shell32" }
 adlibs ={ "$(UDEFRAG_LIB_PATH)\\udefrag" }
 
 umentry = "main"
