@@ -134,10 +134,6 @@ Section "Ultra Defrag core files (required)" SecCore
   ${InstallNativeDefragmenter}
 
   File "${ROOTDIR}\src\installer\ud-help.cmd"
-  File "${ROOTDIR}\src\installer\udctxhandler.cmd"
-  ${If} ${AtLeastWinVista}
-    File "${ROOTDIR}\src\installer\udctxhandler.vbs"
-  ${EndIf}
   File "udefrag.dll"
   File "udefrag.exe"
   File "zenwinx.dll"
