@@ -168,10 +168,6 @@ Section "Ultra Defrag core files (required)" SecCore
 
   SetOutPath "$SYSDIR"
   File "${ROOTDIR}\src\installer\ud-help.cmd"
-  File "${ROOTDIR}\src\installer\udctxhandler.cmd"
-  ${If} ${AtLeastWinVista}
-    File "${ROOTDIR}\src\installer\udctxhandler.vbs"
-  ${EndIf}
   File "udefrag.dll"
   File "udefrag.exe"
   File "zenwinx.dll"
